clickable on mobile fix

--- a/app/src/components/shared/Choice/style.sass
+++ b/app/src/components/shared/Choice/style.sass
@@ -1,1 +1,4 @@
 // styles
+.clickable
+    user-select: none
+    cursor: pointer
